load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "11005_base_conversion_2_test",
    srcs = ["11005_base_conversion_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11005_base_conversion_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(    
    name = "11047_coin_0_test",
    srcs = ["11047_coin_0_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11047_coin_0",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11051_binomial_coefficient_2_test",
    srcs = ["11051_binomial_coefficient_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11051_binomial_coefficient_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11053_longest_increasing_subsequence_test",
    srcs = ["11053_longest_increasing_subsequence_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11053_longest_increasing_subsequence",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11054_longest_bitonic_subsequence_test",
    srcs = ["11054_longest_bitonic_subsequence_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11054_longest_bitonic_subsequence",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11091_use_all_alphabets_test",
    srcs = ["11091_use_all_alphabets_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11091_use_all_alphabets",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11104_fridge_of_your_dreams_test",
    srcs = ["11104_fridge_of_your_dreams_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11104_fridge_of_your_dreams",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11113_the_traveling_orienteerer_test",
    srcs = ["11113_the_traveling_orienteerer_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11113_the_traveling_orienteerer",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11117_letter_cookies_test",
    srcs = ["11117_letter_cookies_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11117_letter_cookies",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11121_communication_channels_test",
    srcs = ["11121_communication_channels_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11121_communication_channels",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11131_balancing_weights_test",
    srcs = ["11131_balancing_weights_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11131_balancing_weights",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11149_decode_the_message_test",
    srcs = ["11149_decode_the_message_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11149_decode_the_message",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11161_negative_people_in_da_house_test",
    srcs = ["11161_negative_people_in_da_house_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11161_negative_people_in_da_house",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11176_in_the_shower_test",
    srcs = ["11176_in_the_shower_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11176_in_the_shower",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11195_peragrams_test",
    srcs = ["11195_peragrams_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11195_peragrams",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11365_secret_test",
    srcs = ["11365_secret_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11365_secret",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11399_atm_test",
    srcs = ["11399_atm_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11399_atm",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11549_identifying_tea_test",
    srcs = ["11549_identifying_tea_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11549_identifying_tea",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11568_scheme_test",
    srcs = ["11568_scheme_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11568_scheme",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11651_sorting_coordinates_2_test",
    srcs = ["11651_sorting_coordinates_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11651_sorting_coordinates_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11654_ascii_code_test",
    srcs = ["11654_ascii_code_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11654_ascii_code",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11657_time_machine_test",
    srcs = ["11657_time_machine_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11657_time_machine",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11659_finding_sum_of_intervals_4_test",
    srcs = ["11659_finding_sum_of_intervals_4_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11659_finding_sum_of_intervals_4",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11660_finding_sum_of_intervals_5_test",
    srcs = ["11660_finding_sum_of_intervals_5_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11660_finding_sum_of_intervals_5",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11718_print_as_it_is_test",
    srcs = ["11718_print_as_it_is_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11718_print_as_it_is",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11719_print_as_it_is_2_test",
    srcs = ["11719_print_as_it_is_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11719_print_as_it_is_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11721_print_disconnect_ten_test",
    srcs = ["11721_print_disconnect_ten_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11721_print_disconnect_ten",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11722_longest_decreasing_subsequence_test",
    srcs = ["11722_longest_decreasing_subsequence_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11722_longest_decreasing_subsequence",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11724_number_of_connected_components_test",
    srcs = ["11724_number_of_connected_components_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11724_number_of_connected_components",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11725_find_parent_of_tree_test",
    srcs = ["11725_find_parent_of_tree_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11725_find_parent_of_tree",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11726_2_by_n_tiling_test",
    srcs = ["11726_2_by_n_tiling_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11726_2_by_n_tiling",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11727_2_by_n_tiling_2_test",
    srcs = ["11727_2_by_n_tiling_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11727_2_by_n_tiling_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11866_Josephus_problem_0_test",
    srcs = ["11866_Josephus_problem_0_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11866_Josephus_problem_0",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11880_ant_test",
    srcs = ["11880_ant_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11880_ant",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11943_move_files_test",
    srcs = ["11943_move_files_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11943_move_files",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11945_hot_crucian_breads_test",
    srcs = ["11945_hot_crucian_breads_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11945_hot_crucian_breads",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "11948_subject_selection_test",
    srcs = ["11948_subject_selection_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//11000/src:11948_subject_selection",
        "@googletest//:gtest_main",
    ],
)
