load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "12015_lis_2",
    hdrs = ["12015_lis_2.h"],
    visibility = ["//12000/tests:__pkg__"],
)

cc_library(
    name = "12605_words_order_flip_over",
    hdrs = ["12605_words_order_flip_over.h"],
    visibility = ["//12000/tests:__pkg__"],
)

cc_library(
    name = "12738_lis_3",
    hdrs = ["12738_lis_3.h"],
    visibility = ["//12000/tests:__pkg__"],
)

cc_library(
    name = "12865_ordinary_knapsack",
    hdrs = ["12865_ordinary_knapsack.h"],
    visibility = ["//12000/tests:__pkg__"],
)

cc_library(
    name = "12927_power_switch",
    hdrs = ["12927_power_switch.h"],
    visibility = ["//12000/tests:__pkg__"],
)
