load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "12015_lis_2_test",
    srcs = ["12015_lis_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//12000/src:12015_lis_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "12174_google_io_test",
    srcs = ["12174_google_io_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//12000/src:12174_google_io",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "12605_words_order_flip_over_test",
    srcs = ["12605_words_order_flip_over_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//12000/src:12605_words_order_flip_over",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "12738_lis_3_test",
    srcs = ["12738_lis_3_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//12000/src:12738_lis_3",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "12865_ordinary_knapsack_test",
    srcs = ["12865_ordinary_knapsack_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//12000/src:12865_ordinary_knapsack",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "12927_power_switch_test",
    srcs = ["12927_power_switch_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//12000/src:12927_power_switch",
        "@googletest//:gtest_main",
    ],
)
