load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "13222_matches",
    hdrs = ["13222_matches.h"],
    visibility = ["//13000/tests:__pkg__"],
)

cc_library(
    name = "13241_least_common_multiple",
    hdrs = ["13241_least_common_multiple.h"],
    visibility = ["//13000/tests:__pkg__"],
)

cc_library(
    name = "13698_hawk_eyes",
    hdrs = ["13698_hawk_eyes.h"],
    visibility = ["//13000/tests:__pkg__"],
)
