load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "13118_newton_and_apple",
    hdrs = ["13118_newton_and_apple.h"],
    visibility = ["//13000/tests:__pkg__"],
)

cc_library(
    name = "13222_matches",
    hdrs = ["13222_matches.h"],
    visibility = ["//13000/tests:__pkg__"],
)

cc_library(
    name = "13241_least_common_multiple",
    hdrs = ["13241_least_common_multiple.h"],
    visibility = ["//13000/tests:__pkg__"],
)

cc_library(
    name = "13301_tile_decoration",
    hdrs = ["13301_tile_decoration.h"],
    visibility = ["//13000/tests:__pkg__"],
)

cc_library(
    name = "13698_hawk_eyes",
    hdrs = ["13698_hawk_eyes.h"],
    visibility = ["//13000/tests:__pkg__"],
)

cc_library(
    name = "13699_recurrence_relation",
    hdrs = ["13699_recurrence_relation.h"],
    visibility = ["//13000/tests:__pkg__"],
)

cc_library(
    name = "13751_histogram",
    hdrs = ["13751_histogram.h"],
    visibility = ["//13000/tests:__pkg__"],
)
