cc_test(
    name = "13222_matches_test",
    srcs = ["13222_matches_test.cc"],
    deps = [
        "//13000/src:13222_matches",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "13241_least_common_multiple_test",
    srcs = ["13241_least_common_multiple_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//13000/src:13241_least_common_multiple",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "13698_hawk_eyes_test",
    srcs = ["13698_hawk_eyes_test.cc"],
    deps = [
        "//13000/src:13698_hawk_eyes",
        "@googletest//:gtest_main",
    ],
)
