load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "14002_longest_increasing_subsequence_4",
    hdrs = ["14002_longest_increasing_subsequence_4.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14003_longest_increasing_subsequence_5",
    hdrs = ["14003_longest_increasing_subsequence_5.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14215_three_sticks",
    hdrs = ["14215_three_sticks.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14494_what_is_dynamic",
    hdrs = ["14494_what_is_dynamic.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14501_resignation",
    hdrs = ["14501_resignation.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14579_add_and_mul",
    hdrs = ["14579_add_and_mul.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14581_surrounding_fan",
    hdrs = ["14581_surrounding_fan.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14606_pizza_small",
    hdrs = ["14606_pizza_small.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14730_small",
    hdrs = ["14730_small.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14916_change",
    hdrs = ["14916_change.h"],
    visibility = ["//14000/tests:__pkg__"],
)

cc_library(
    name = "14935_fa",
    hdrs = ["14935_fa.h"],
    visibility = ["//14000/tests:__pkg__"],
)