load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "14002_longest_increasing_subsequence_4_test",
    srcs = ["14002_longest_increasing_subsequence_4_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14002_longest_increasing_subsequence_4",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14003_longest_increasing_subsequence_5_test",
    srcs = ["14003_longest_increasing_subsequence_5_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14003_longest_increasing_subsequence_5",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14501_resignation_test",
    srcs = ["14501_resignation_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14501_resignation",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14581_surrounding_fan_test",
    srcs = ["14581_surrounding_fan_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14581_surrounding_fan",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14730_small_test",
    srcs = ["14730_small_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14730_small",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14916_change_test",
    srcs = ["14916_change_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14916_change",
        "@googletest//:gtest_main",
    ],
)
