load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "14002_longest_increasing_subsequence_4_test",
    srcs = ["14002_longest_increasing_subsequence_4_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14002_longest_increasing_subsequence_4",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14003_longest_increasing_subsequence_5_test",
    srcs = ["14003_longest_increasing_subsequence_5_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14003_longest_increasing_subsequence_5",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14215_three_sticks_test",
    srcs = ["14215_three_sticks_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14215_three_sticks",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14494_what_is_dynamic_test",
    srcs = ["14494_what_is_dynamic_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14494_what_is_dynamic",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14501_resignation_test",
    srcs = ["14501_resignation_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14501_resignation",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14561_palindrome_test",
    srcs = ["14561_palindrome_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14561_palindrome",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14568_yonsei_2017_test",
    srcs = ["14568_yonsei_2017_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14568_yonsei_2017",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14579_add_and_mul_test",
    srcs = ["14579_add_and_mul_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14579_add_and_mul",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14581_surrounding_fan_test",
    srcs = ["14581_surrounding_fan_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14581_surrounding_fan",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14582_i_lost_today_too_test",
    srcs = ["14582_i_lost_today_too_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14582_i_lost_today_too",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14606_pizza_small_test",
    srcs = ["14606_pizza_small_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14606_pizza_small",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14656_ta_is_sadist_test",
    srcs = ["14656_ta_is_sadist_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14656_ta_is_sadist",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14730_small_test",
    srcs = ["14730_small_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14730_small",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14910_ascent_load_test",
    srcs = ["14910_ascent_load_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14910_ascent_load",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14913_find_element_number_test",
    srcs = ["14913_find_element_number_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14913_find_element_number",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14914_split_apple_and_banana_test",
    srcs = ["14914_split_apple_and_banana_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14914_split_apple_and_banana",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14916_change_test",
    srcs = ["14916_change_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14916_change",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "14935_fa_test",
    srcs = ["14935_fa_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//14000/src:14935_fa",
        "@googletest//:gtest_main",
    ],
)