load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "15232_rectangles",
    hdrs = ["15232_rectangles.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15680_yonsei_university",
    hdrs = ["15680_yonsei_university.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15740_a_plus_b_9",
    hdrs = ["15740_a_plus_b_9.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15841_virus_outbreak",
    hdrs = ["15841_virus_outbreak.h"],
    visibility = ["//15000/tests:__pkg__"],
)
