load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "15000_caps",
    hdrs = ["15000_caps.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15151_incomplete_book",
    hdrs = ["15151_incomplete_book.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15161_grass_cutting",
    hdrs = ["15161_grass_cutting.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15181_beautiful_music",
    hdrs = ["15181_beautiful_music.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15232_rectangles",
    hdrs = ["15232_rectangles.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15312_name_chemistry",
    hdrs = ["15312_name_chemistry.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15474_pencils",
    hdrs = ["15474_pencils.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15624_fibonacci_number_7",
    hdrs = ["15624_fibonacci_number_7.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15633_fan_death",
    hdrs = ["15633_fan_death.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15649_n_and_m_1",
    hdrs = ["15649_n_and_m_1.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15650_n_and_m_2",
    hdrs = ["15650_n_and_m_2.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15651_n_and_m_3",
    hdrs = ["15651_n_and_m_3.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15652_n_and_m_4",
    hdrs = ["15652_n_and_m_4.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15654_n_and_m_5",
    hdrs = ["15654_n_and_m_5.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15655_n_and_m_6",
    hdrs = ["15655_n_and_m_6.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15656_n_and_m_7",
    hdrs = ["15656_n_and_m_7.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15657_n_and_m_8",
    hdrs = ["15657_n_and_m_8.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15663_n_and_m_9",
    hdrs = ["15663_n_and_m_9.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15666_n_and_m_12",
    hdrs = ["15666_n_and_m_12.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15680_yonsei_university",
    hdrs = ["15680_yonsei_university.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15740_a_plus_b_9",
    hdrs = ["15740_a_plus_b_9.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15784_jealousy_jinseo",
    hdrs = ["15784_jealousy_jinseo.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15813_what_is_your_name_score",
    hdrs = ["15813_what_is_your_name_score.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15841_virus_outbreak",
    hdrs = ["15841_virus_outbreak.h"],
    visibility = ["//15000/tests:__pkg__"],
)

cc_library(
    name = "15874_caesar_cipher",
    hdrs = ["15874_caesar_cipher.h"],
    visibility = ["//15000/tests:__pkg__"],
)