load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "15680_yonsei_university_test",
    srcs = ["15680_yonsei_university_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15680_yonsei_university",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15740_a_plus_b_9_test",
    srcs = ["15740_a_plus_b_9_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15740_a_plus_b_9",
        "@googletest//:gtest_main",
    ],
)
