load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "15161_grass_cutting_test",
    srcs = ["15161_grass_cutting_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15161_grass_cutting",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15181_beautiful_music_test",
    srcs = ["15181_beautiful_music_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15181_beautiful_music",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15232_rectangles_test",
    srcs = ["15232_rectangles_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15232_rectangles",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15474_pencils_test",
    srcs = ["15474_pencils_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15474_pencils",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15680_yonsei_university_test",
    srcs = ["15680_yonsei_university_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15680_yonsei_university",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15740_a_plus_b_9_test",
    srcs = ["15740_a_plus_b_9_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15740_a_plus_b_9",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15841_virus_outbreak_test",
    srcs = ["15841_virus_outbreak_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15841_virus_outbreak",
        "@googletest//:gtest_main",
    ],
)
