load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "15000_caps_test",
    srcs = ["15000_caps_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15000_caps",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15151_incomplete_book_test",
    srcs = ["15151_incomplete_book_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15151_incomplete_book",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15161_grass_cutting_test",
    srcs = ["15161_grass_cutting_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15161_grass_cutting",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15181_beautiful_music_test",
    srcs = ["15181_beautiful_music_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15181_beautiful_music",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15232_rectangles_test",
    srcs = ["15232_rectangles_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15232_rectangles",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15312_name_chemistry_test",
    srcs = ["15312_name_chemistry_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15312_name_chemistry",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15474_pencils_test",
    srcs = ["15474_pencils_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15474_pencils",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15624_fibonacci_number_7_test",
    srcs = ["15624_fibonacci_number_7_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15624_fibonacci_number_7",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15633_fan_death_test",
    srcs = ["15633_fan_death_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15633_fan_death",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15649_n_and_m_1_test",
    srcs = ["15649_n_and_m_1_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15649_n_and_m_1",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15650_n_and_m_2_test",
    srcs = ["15650_n_and_m_2_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15650_n_and_m_2",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15651_n_and_m_3_test",
    srcs = ["15651_n_and_m_3_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15651_n_and_m_3",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15652_n_and_m_4_test",
    srcs = ["15652_n_and_m_4_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15652_n_and_m_4",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15654_n_and_m_5_test",
    srcs = ["15654_n_and_m_5_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15654_n_and_m_5",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15655_n_and_m_6_test",
    srcs = ["15655_n_and_m_6_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15655_n_and_m_6",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15656_n_and_m_7_test",
    srcs = ["15656_n_and_m_7_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15656_n_and_m_7",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15657_n_and_m_8_test",
    srcs = ["15657_n_and_m_8_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15657_n_and_m_8",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15663_n_and_m_9_test",
    srcs = ["15663_n_and_m_9_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15663_n_and_m_9",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15666_n_and_m_12_test",
    srcs = ["15666_n_and_m_12_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15666_n_and_m_12",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15680_yonsei_university_test",
    srcs = ["15680_yonsei_university_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15680_yonsei_university",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15740_a_plus_b_9_test",
    srcs = ["15740_a_plus_b_9_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15740_a_plus_b_9",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15784_jealousy_jinseo_test",
    srcs = ["15784_jealousy_jinseo_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15784_jealousy_jinseo",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15813_what_is_your_name_score_test",
    srcs = ["15813_what_is_your_name_score_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15813_what_is_your_name_score",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15841_virus_outbreak_test",
    srcs = ["15841_virus_outbreak_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15841_virus_outbreak",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15874_caesar_cipher_test",
    srcs = ["15874_caesar_cipher_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15874_caesar_cipher",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "15963_casio_test",
    srcs = ["15963_casio_test.cc"],
    deps = [
        "//test_headers:test_helper",
        "//15000/src:15963_casio",
        "@googletest//:gtest_main",
    ],
)